--- a/_posts/2021-03-23-assignment1.html
+++ b/_posts/2021-03-23-assignment1.html
@@ -86,15 +86,15 @@ norm_img = (double_img - img_min)/(img_max - img_min);
 norm_img(norm_img &gt; 1) = 1;
 norm_img(norm_img &lt; 0) = 0;
 imshow(norm_img*5);
-</pre><img vspace="5" hspace="5" src="assignment1_01.png" alt="" width="500px"> <h2 id="3">Identifying the correct Bayer pattern</h2><p>&#49828;&#53356;&#47549;&#53944; &#47592; &#50500;&#47000;&#50640; bayer_pattern &#54632;&#49688;&#44032; &#49440;&#50616;&#46104;&#50612;&#51080;&#51020; &#51452;&#50612;&#51652; bayer pattern 4&#44060;&#50640; &#45824;&#54644;&#49436; &#54632;&#49688;&#44032; &#44396;&#54788;&#46104;&#50612;&#51080;&#51004;&#47728; &#44033; &#54056;&#53556;&#50640; &#46384;&#47480; &#51060;&#48120;&#51648;&#51032; &#44208;&#44284;&#45716; &#45796;&#51020;&#44284; &#44057;&#51020;</p><pre class="codeinput">rgb_img = bayer_pattern(norm_img, <span class="string">'grbg'</span>);
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets/images/assignment1_01.png" alt="" width="500px"> <h2 id="3">Identifying the correct Bayer pattern</h2><p>&#49828;&#53356;&#47549;&#53944; &#47592; &#50500;&#47000;&#50640; bayer_pattern &#54632;&#49688;&#44032; &#49440;&#50616;&#46104;&#50612;&#51080;&#51020; &#51452;&#50612;&#51652; bayer pattern 4&#44060;&#50640; &#45824;&#54644;&#49436; &#54632;&#49688;&#44032; &#44396;&#54788;&#46104;&#50612;&#51080;&#51004;&#47728; &#44033; &#54056;&#53556;&#50640; &#46384;&#47480; &#51060;&#48120;&#51648;&#51032; &#44208;&#44284;&#45716; &#45796;&#51020;&#44284; &#44057;&#51020;</p><pre class="codeinput">rgb_img = bayer_pattern(norm_img, <span class="string">'grbg'</span>);
 imshow(rgb_img*5);
-</pre><img vspace="5" hspace="5" src="assignment1_02.png" alt="" width="500px"> <pre class="codeinput">rgb_img_c = bayer_pattern(norm_img, <span class="string">'rggb'</span>);
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets/images/assignment1_02.png" alt="" width="500px"> <pre class="codeinput">rgb_img_c = bayer_pattern(norm_img, <span class="string">'rggb'</span>);
 imshow(rgb_img_c*5);
-</pre><img vspace="5" hspace="5" src="assignment1_03.png" alt="" width="500px"> <pre class="codeinput">rgb_img = bayer_pattern(norm_img, <span class="string">'bggr'</span>);
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets//images/assignment1_03.png" alt="" width="500px"> <pre class="codeinput">rgb_img = bayer_pattern(norm_img, <span class="string">'bggr'</span>);
 imshow(rgb_img*5);
-</pre><img vspace="5" hspace="5" src="assignment1_04.png" alt="" width="500px"> <pre class="codeinput">rgb_img = bayer_pattern(norm_img, <span class="string">'gbrg'</span>);
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets/images/assignment1_04.png" alt="" width="500px"> <pre class="codeinput">rgb_img = bayer_pattern(norm_img, <span class="string">'gbrg'</span>);
 imshow(rgb_img*5);
-</pre><img vspace="5" hspace="5" src="assignment1_05.png" alt="" width="500px"> <p>4&#44060;&#51032; pattern &#51473;&#50640;&#49436; &#45796;&#47480; 3&#44060;&#51032; pattern&#50640; &#48708;&#54616;&#50668; RGGB &#54056;&#53556;&#51032; &#44221;&#50864;&#45716; &#52488;&#47197;&#49353; &#54596;&#53552;&#47484; &#51201;&#50857;&#54620; &#44163;&#44284; &#44057;&#51008; &#45712;&#45196;&#51012; &#51452;&#51648;&#47564; &#47785;&#54364;&#47196; &#54616;&#45716; &#51060;&#48120;&#51648;&#51032; &#49353;&#49345; &#51312;&#54633;&#51004;&#47196; &#51064;&#49885;&#54624; &#49688; &#51080;&#51020; &#46384;&#46972;&#49436; RGGB Bayer pattern&#51060; &#51201;&#54633;&#54632;</p><h2 id="8">White balancing</h2><p>white world&#50752; gray world balancing&#50640; &#49324;&#50857;&#46108; &#49885;&#51008; &#49688;&#50629;&#51088;&#47308;&#47484; &#52280;&#44256;&#54616;&#50688;&#51020; &#51060;&#48120;&#51648;&#47484; RGB&#47196; &#48516;&#47532;&#54616;&#50668; &#49885;&#51012; &#51201;&#50857;&#54616;&#44256; &#45796;&#49884; 1D &#51060;&#48120;&#51648;&#47196; &#54633;&#52432;&#51468;</p><pre class="codeinput">r_img = norm_img(1:2:end, 1:2:end);
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets/images/assignment1_05.png" alt="" width="500px"> <p>4&#44060;&#51032; pattern &#51473;&#50640;&#49436; &#45796;&#47480; 3&#44060;&#51032; pattern&#50640; &#48708;&#54616;&#50668; RGGB &#54056;&#53556;&#51032; &#44221;&#50864;&#45716; &#52488;&#47197;&#49353; &#54596;&#53552;&#47484; &#51201;&#50857;&#54620; &#44163;&#44284; &#44057;&#51008; &#45712;&#45196;&#51012; &#51452;&#51648;&#47564; &#47785;&#54364;&#47196; &#54616;&#45716; &#51060;&#48120;&#51648;&#51032; &#49353;&#49345; &#51312;&#54633;&#51004;&#47196; &#51064;&#49885;&#54624; &#49688; &#51080;&#51020; &#46384;&#46972;&#49436; RGGB Bayer pattern&#51060; &#51201;&#54633;&#54632;</p><h2 id="8">White balancing</h2><p>white world&#50752; gray world balancing&#50640; &#49324;&#50857;&#46108; &#49885;&#51008; &#49688;&#50629;&#51088;&#47308;&#47484; &#52280;&#44256;&#54616;&#50688;&#51020; &#51060;&#48120;&#51648;&#47484; RGB&#47196; &#48516;&#47532;&#54616;&#50668; &#49885;&#51012; &#51201;&#50857;&#54616;&#44256; &#45796;&#49884; 1D &#51060;&#48120;&#51648;&#47196; &#54633;&#52432;&#51468;</p><pre class="codeinput">r_img = norm_img(1:2:end, 1:2:end);
 g_img = norm_img(1:2:end, 2:2:end);
 g_img = [g_img, norm_img(2:2:end, 1:2:end)];
 b_img = norm_img(2:2:end, 2:2:end);
@@ -113,7 +113,7 @@ white_img = norm_img;
     <span class="keyword">end</span>
 <span class="keyword">end</span>
 imshow(white_img*5);
-</pre><img vspace="5" hspace="5" src="assignment1_06.png" alt="" width="500px"> <p>gray world R = R/R_MEAN*G_MEAN G = G B = B/B_MEAN*G_MEAN</p><pre class="codeinput">r_mean = mean(r_img(:));
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets/images/assignment1_06.png" alt="" width="500px"> <p>gray world R = R/R_MEAN*G_MEAN G = G B = B/B_MEAN*G_MEAN</p><pre class="codeinput">r_mean = mean(r_img(:));
 g_mean = mean(g_img(:));
 b_mean = mean(b_img(:));
 
@@ -128,7 +128,7 @@ gray_img = norm_img;
     <span class="keyword">end</span>
 <span class="keyword">end</span>
 imshow(gray_img*5);
-</pre><img vspace="5" hspace="5" src="assignment1_07.png" alt="" width="500px"> <p>RGB &#51060;&#48120;&#51648;&#44032; &#50500;&#45772; &#49345;&#53468;&#47196;&#45716; &#50612;&#46496;&#54620; white balancing &#48169;&#49885;&#51060; &#51201;&#54633;&#54620;&#51648; &#44396;&#48516;&#54616;&#44592; &#50612;&#47140;&#50880; &#46384;&#46972;&#49436; &#51076;&#51032;&#47196; RGB &#51060;&#48120;&#51648;&#47196; &#48320;&#54872; &#54980; white balancing &#48169;&#49885;&#51012; &#49440;&#53469;&#54616;&#50688;&#51020;</p><pre class="codeinput">tmp_img = zeros(2856, 4290, 3);
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets//images/assignment1_07.png" alt="" width="500px"> <p>RGB &#51060;&#48120;&#51648;&#44032; &#50500;&#45772; &#49345;&#53468;&#47196;&#45716; &#50612;&#46496;&#54620; white balancing &#48169;&#49885;&#51060; &#51201;&#54633;&#54620;&#51648; &#44396;&#48516;&#54616;&#44592; &#50612;&#47140;&#50880; &#46384;&#46972;&#49436; &#51076;&#51032;&#47196; RGB &#51060;&#48120;&#51648;&#47196; &#48320;&#54872; &#54980; white balancing &#48169;&#49885;&#51012; &#49440;&#53469;&#54616;&#50688;&#51020;</p><pre class="codeinput">tmp_img = zeros(2856, 4290, 3);
 r_max = max(rgb_img_c(:,:,1));
 g_max = max(rgb_img_c(:,:,2));
 b_max = max(rgb_img_c(:,:,3));
@@ -136,7 +136,7 @@ tmp_img(:,:,1) = rgb_img_c(:,:,1)/r_max*g_max;
 tmp_img(:,:,2) = rgb_img_c(:,:,2);
 tmp_img(:,:,3) = rgb_img_c(:,:,3)/b_max*g_max;
 imshow(tmp_img*5);
-</pre><img vspace="5" hspace="5" src="assignment1_08.png" alt="" width="500px"> <pre class="codeinput">r_mean = mean(rgb_img_c(:,:,1));
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets//images/assignment1_08.png" alt="" width="500px"> <pre class="codeinput">r_mean = mean(rgb_img_c(:,:,1));
 g_mean = mean(rgb_img_c(:,:,2));
 b_mean = mean(rgb_img_c(:,:,3));
 tmp_img(:,:,1) = rgb_img_c(:,:,1)/r_mean*g_mean;
@@ -144,7 +144,7 @@ tmp_img(:,:,2) = rgb_img_c(:,:,2);
 tmp_img(:,:,3) = rgb_img_c(:,:,3)/b_mean*g_mean;
 imshow(tmp_img*5);
 <span class="comment">% &#46384;&#46972;&#49436; gray world white balancing&#51012; &#49440;&#53469;&#54616;&#50688;&#51020;</span>
-</pre><img vspace="5" hspace="5" src="assignment1_09.png" alt="" width="500px"> <h2 id="14">Demosaicing</h2><p>Bilinear interpolation rggb R&#44284; B&#51032; &#44221;&#50864;&#50640;&#45716; interpolation2d &#54632;&#49688;&#47484; &#44536;&#47000;&#46020; &#49324;&#50857;&#51060; &#44032;&#45733;&#54632; &#54616;&#51648;&#47564; G&#51032; &#44221;&#50864;&#50640;&#45716; &#54632;&#49688;&#47484; &#44536;&#47000;&#46020; &#49324;&#50857;&#54616;&#44592;&#50640;&#45716; &#52404;&#49828;&#54032; &#47924;&#45740;&#52376;&#47100; &#54589;&#49472;&#46308;&#51060; &#50948;&#52824;&#54644;&#51080;&#50612;&#49436; &#51201;&#54633;&#54616;&#51648; &#50506;&#51004;&#48064;&#47196; &#49464;&#47196;&#51032; &#50948;&#52824;&#44032; &#51068;&#52824;&#54616;&#45716; &#54589;&#49472;&#45180;&#47532; &#47784;&#50500;&#49436; 2&#44060;&#51032; &#48176;&#50676;&#47196; &#45208;&#45572;&#50612; &#54632;&#49688;&#47484; &#49324;&#50857;&#54632;</p><pre class="codeinput">demos_img = zeros(2856, 4290, 3);
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets/images/assignment1_09.png" alt="" width="500px"> <h2 id="14">Demosaicing</h2><p>Bilinear interpolation rggb R&#44284; B&#51032; &#44221;&#50864;&#50640;&#45716; interpolation2d &#54632;&#49688;&#47484; &#44536;&#47000;&#46020; &#49324;&#50857;&#51060; &#44032;&#45733;&#54632; &#54616;&#51648;&#47564; G&#51032; &#44221;&#50864;&#50640;&#45716; &#54632;&#49688;&#47484; &#44536;&#47000;&#46020; &#49324;&#50857;&#54616;&#44592;&#50640;&#45716; &#52404;&#49828;&#54032; &#47924;&#45740;&#52376;&#47100; &#54589;&#49472;&#46308;&#51060; &#50948;&#52824;&#54644;&#51080;&#50612;&#49436; &#51201;&#54633;&#54616;&#51648; &#50506;&#51004;&#48064;&#47196; &#49464;&#47196;&#51032; &#50948;&#52824;&#44032; &#51068;&#52824;&#54616;&#45716; &#54589;&#49472;&#45180;&#47532; &#47784;&#50500;&#49436; 2&#44060;&#51032; &#48176;&#50676;&#47196; &#45208;&#45572;&#50612; &#54632;&#49688;&#47484; &#49324;&#50857;&#54632;</p><pre class="codeinput">demos_img = zeros(2856, 4290, 3);
 base_r = gray_img(1:2:end, 1:2:end);
 base_g1 = gray_img(1:2:end, 2:2:end);
 base_g2 = gray_img(2:2:end, 1:2:end);
@@ -160,7 +160,7 @@ demos_img(2:2:end,:,2) = interp2(1:2:4290, 2:2:2856, base_g2, x2, y2);
 demos_img(:,:,3) = interp2(2:2:4290, 2:2:2856, base_b, x, y);
 
 imshow(demos_img*4);
-</pre><img vspace="5" hspace="5" src="assignment1_10.png" alt="" width="500px"> <h2 id="15">Brightness adjustment and gamma correction</h2><p>grayscale&#47196; &#48320;&#54872;&#54620; &#51060;&#48120;&#51648;&#51032; &#52572;&#45824;&#44050;&#44284; &#52572;&#49548;&#44050;&#51008; 0&#44284; 1&#49324;&#51060;&#47196; &#47582;&#52628;&#47732; &#51060;&#48120;&#51648;&#51032; &#51204;&#52404;&#51201;&#51064; &#48157;&#44592;&#44032; &#48157;&#50500;&#51648;&#45716; &#45824;&#49888;&#50640; &#51068;&#48512; &#47588;&#50864; &#48157;&#51008; &#48512;&#48516;&#50640; &#47582;&#52656;&#49436; &#51060;&#48120;&#51648;&#51032; &#48157;&#44592;&#44032; &#51312;&#51221;&#46120; &#46384;&#46972;&#49436; &#52572;&#45824;&#44050;&#51060; &#50500;&#45772; &#51068;&#48512; &#47588;&#50864; &#48157;&#51008; &#48512;&#48516;&#51012; &#51228;&#50808;&#54624; &#49688; &#51080;&#45716; 99.9%&#50640; &#50948;&#52824;&#54620; &#44050;&#51012; &#52572;&#45824;&#44050; 1&#47196; &#47582;&#52656;&#49436; &#48157;&#44592;&#47484; &#51312;&#51208;&#54616;&#44256; 1&#47484; &#52488;&#44284;&#54616;&#45716; &#44050;&#46308;&#51012; 1&#47196; &#47582;&#52656;&#51468;.</p><pre class="codeinput">grayscale = rgb2gray(demos_img);
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets/images/assignment1_10.png" alt="" width="500px"> <h2 id="15">Brightness adjustment and gamma correction</h2><p>grayscale&#47196; &#48320;&#54872;&#54620; &#51060;&#48120;&#51648;&#51032; &#52572;&#45824;&#44050;&#44284; &#52572;&#49548;&#44050;&#51008; 0&#44284; 1&#49324;&#51060;&#47196; &#47582;&#52628;&#47732; &#51060;&#48120;&#51648;&#51032; &#51204;&#52404;&#51201;&#51064; &#48157;&#44592;&#44032; &#48157;&#50500;&#51648;&#45716; &#45824;&#49888;&#50640; &#51068;&#48512; &#47588;&#50864; &#48157;&#51008; &#48512;&#48516;&#50640; &#47582;&#52656;&#49436; &#51060;&#48120;&#51648;&#51032; &#48157;&#44592;&#44032; &#51312;&#51221;&#46120; &#46384;&#46972;&#49436; &#52572;&#45824;&#44050;&#51060; &#50500;&#45772; &#51068;&#48512; &#47588;&#50864; &#48157;&#51008; &#48512;&#48516;&#51012; &#51228;&#50808;&#54624; &#49688; &#51080;&#45716; 99.9%&#50640; &#50948;&#52824;&#54620; &#44050;&#51012; &#52572;&#45824;&#44050; 1&#47196; &#47582;&#52656;&#49436; &#48157;&#44592;&#47484; &#51312;&#51208;&#54616;&#44256; 1&#47484; &#52488;&#44284;&#54616;&#45716; &#44050;&#46308;&#51012; 1&#47196; &#47582;&#52656;&#51468;.</p><pre class="codeinput">grayscale = rgb2gray(demos_img);
 scale = 1/max(grayscale(:));
 brightness_img = min(1, demos_img*scale);
 imshow(brightness_img);
@@ -168,12 +168,12 @@ imshow(brightness_img);
 scale = 1/prctile(grayscale(:), 99.9);
 brightness_img = min(1, demos_img * scale);
 imshow(brightness_img);
-</pre><img vspace="5" hspace="5" src="assignment1_11.png" alt="" width="500px"> <pre class="codeinput">gamma_img = brightness_img;
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets/images/assignment1_11.png" alt="" width="500px"> <pre class="codeinput">gamma_img = brightness_img;
 gamma_img(gamma_img&lt;=0.0031308) = gamma_img(gamma_img&lt;=0.0031308)*12.92;
 gamma_img(gamma_img&gt;=0.0031308) = (1+0.055) * power(gamma_img(gamma_img&gt;=0.0031308), 1/2.4)-0.055;
 
 imshow(gamma_img);
-</pre><img vspace="5" hspace="5" src="assignment1_12.png" alt="" width="500px"> <h2 id="17">Compression</h2><p>PNG&#51032; &#44221;&#50864; &#47924;&#49552;&#49892; &#50517;&#52629;&#51012; JPEG&#51032; &#44221;&#50864; &#51068;&#48512; &#51221;&#48372;&#47484; &#47924;&#49884;&#54616;&#45716; &#49552;&#49892; &#50517;&#52629;&#51012; &#49324;&#50857;&#54632;. &#50756;&#48317;&#54616;&#44172; 95&#54532;&#47196;&#44032; &#50500;&#45772; &#45824;&#47029; 95.2&#54532;&#47196; &#51221;&#46020;&#51032; &#50517;&#52629;&#44208;&#44284;&#47484; &#48372;&#50668;&#51468;</p><pre class="codeinput">imwrite(gamma_img, <span class="string">"uncompression.png"</span>);
+</pre><img vspace="5" hspace="5" src="https://hyeonjjung.github.io/assets/images/assignment1_12.png" alt="" width="500px"> <h2 id="17">Compression</h2><p>PNG&#51032; &#44221;&#50864; &#47924;&#49552;&#49892; &#50517;&#52629;&#51012; JPEG&#51032; &#44221;&#50864; &#51068;&#48512; &#51221;&#48372;&#47484; &#47924;&#49884;&#54616;&#45716; &#49552;&#49892; &#50517;&#52629;&#51012; &#49324;&#50857;&#54632;. &#50756;&#48317;&#54616;&#44172; 95&#54532;&#47196;&#44032; &#50500;&#45772; &#45824;&#47029; 95.2&#54532;&#47196; &#51221;&#46020;&#51032; &#50517;&#52629;&#44208;&#44284;&#47484; &#48372;&#50668;&#51468;</p><pre class="codeinput">imwrite(gamma_img, <span class="string">"uncompression.png"</span>);
 imwrite(gamma_img, <span class="string">"compression.jpg"</span>, <span class="string">'quality'</span>, 95);
 
 uncomress_img = dir(<span class="string">"uncompression.png"</span>);
